--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
 								<span class="subheading">Hello!</span>
-								<h1 class="mb-4 mt-3">I'm <span>Vansh Gandhi</span></h1>
+								<h1 class="mb-4 mt-3">I'm <span>esha Gandhi</span></h1>
 								<h2 class="mb-4">A Problem Solver</h2>
 								<p><a href="sol.html " class="btn btn-primary py-3 px-4" target="_blank">Prove
 										it!</a> </p>
@@ -124,11 +124,11 @@
 							<h2 class="mb-4">About Me</h2>
 							<p>A passionate data science major working towards the sexiest job of the 21st Century</p>
 							<ul class="about-info mt-4 px-md-0 px-2">
-								<li class="d-flex"><span>Name:</span> <span>Vansh Gandhi</span></li>
+								<li class="d-flex"><span>Name:</span> <span>esha Gandhi</span></li>
 								<li class="d-flex"><span>Date of birth:</span> <span>May 31, 2002</span></li>
 								<li class="d-flex"><span>Address:</span> <span>Mumbai MH 400102 India</span></li>
 								<!-- <li class="d-flex"><span>Zip code:</span> <span>1000</span></li> -->
-								<li class="d-flex"><span>Email:</span> <span>gandhivansh28@gmail.com</span></li>
+								<li class="d-flex"><span>Email:</span> <span>gandhiesha28@gmail.com</span></li>
 								<li class="d-flex"><span>Phone: </span> <span>+91 9825515915</span></li>
 							</ul>
 						</div>
@@ -392,7 +392,7 @@
 						style="background-image: url(images/patient.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="https://vansh-g-patient-data-clustering-web-app-streamlit-gn1npw.streamlit.app/"
+							<h3><a href="https://esha-g-patient-data-clustering-web-app-streamlit-gn1npw.streamlit.app/"
 									target="_blank">Patient
 									Data Segmentation</a></h3>
 							<span>Machine Learning</span>
@@ -405,7 +405,7 @@
 						style="background-image: url(images/nlp.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="https://github.com/Vansh-G/TextSense" target="_blank">TextSense</a></h3>
+							<h3><a href="https://github.com/esha-G/TextSense" target="_blank">TextSense</a></h3>
 							<span>Intelligent Text Extraction and Analysis</span>
 						</div>
 					</div>
@@ -417,7 +417,7 @@
 						style="background-image: url(images/cv.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="https://github.com/Vansh-G/Trace-pass" target="_blank">Trace-Pass</a>
+							<h3><a href="https://github.com/esha-G/Trace-pass" target="_blank">Trace-Pass</a>
 							</h3>
 							<span>Computer Vision</span>
 						</div>
@@ -574,7 +574,7 @@
 				<div class="col-md-7 ftco-animate text-center">
 					<h2>Actively Pursuing Data Internships and Roles</h2>
 					<p>Absolutely open to remote roles globally and <br> in-office roles in India </p>
-					<p class="mb-0"><a href="https://linkedin.com/in/vansh-gandhi/" class="btn btn-primary py-3 px-5"
+					<p class="mb-0"><a href="https://linkedin.com/in/esha-gandhi/" class="btn btn-primary py-3 px-5"
 							target="_blank">Hire
 							me</a></p>
 				</div>
@@ -617,7 +617,7 @@
 							<span class="icon-paper-plane"></span>
 						</div>
 						<h3 class="mb-4">Email Address</h3>
-						<p><a href="mailto:gandhivansh28@gmail.com">gandhivansh28@gmail.com</a></p>
+						<p><a href="mailto:gandhiesha28@gmail.com">gandhiesha28@gmail.com</a></p>
 					</div>
 				</div>
 				<div class=" col-md-6 col-lg-3 d-flex ftco-animate">
@@ -641,9 +641,9 @@
 					<div class="ftco-footer-widget mb-4">
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 							<p>Socials</p>
-							<li class="ftco-animate"><a href="https://linkedin.com/in/vansh-gandhi/"><span
+							<li class="ftco-animate"><a href="https://linkedin.com/in/esha-gandhi/"><span
 										class="icon-linkedin"></span></a></li>
-							<li class="ftco-animate"><a href="https://github.com/Vansh-G"><span
+							<li class="ftco-animate"><a href="https://github.com/esha-G"><span
 										class="icon-github"></span></a></li>
 						</ul>
 					</div>
