--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">Eshas Portfolio</a>
+			<a class="navbar-brand" href="index.html">Esha's Portfolio</a>
 			<button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse"
 				data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
@@ -68,7 +68,7 @@
 							data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
 								<span class="subheading">Hello!</span>
-								<h1 class="mb-4 mt-3">I'm <span>esha Gandhi</span></h1>
+								<h1 class="mb-4 mt-3">I'm <span>Esha Gandhi</span></h1>
 								<h2 class="mb-4">A Problem Solver</h2>
 								<p><a href="sol.html " class="btn btn-primary py-3 px-4" target="_blank">Prove
 										it!</a> </p>
@@ -94,7 +94,7 @@
 							data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
 								<span class="subheading">Hello!</span>
-								<h1 class="mb-4 mt-3">I'm a <span>data science bachelor</span> based in Mumbai</h1>
+								<h1 class="mb-4 mt-3">I'm a <span>IT bachelor</span> based in Rajkot</h1>
 								<!-- <a href="#" class="btn btn-primary py-3 px-4">Hire me</a>  -->
 								<p><a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My
 										work</a></p>
@@ -122,11 +122,11 @@
 						<div class="col-md-12 heading-section ftco-animate">
 							<h1 class="big">About</h1>
 							<h2 class="mb-4">About Me</h2>
-							<p>A passionate data science major working towards the sexiest job of the 21st Century</p>
+							<p>A passionate IT Bachelor working towards Cloud and Devops</p>
 							<ul class="about-info mt-4 px-md-0 px-2">
-								<li class="d-flex"><span>Name:</span> <span>esha Gandhi</span></li>
-								<li class="d-flex"><span>Date of birth:</span> <span>May 31, 2002</span></li>
-								<li class="d-flex"><span>Address:</span> <span>Mumbai MH 400102 India</span></li>
+								<li class="d-flex"><span>Name:</span> <span>Esha Gandhi</span></li>
+								<li class="d-flex"><span>Date of birth:</span> <span>Sep 25, 2002</span></li>
+								<li class="d-flex"><span>Address:</span> <span>Mumbai Rajkot, India</span></li>
 								<!-- <li class="d-flex"><span>Zip code:</span> <span>1000</span></li> -->
 								<li class="d-flex"><span>Email:</span> <span>gandhiesha28@gmail.com</span></li>
 								<li class="d-flex"><span>Phone: </span> <span>+91 9825515915</span></li>
@@ -162,10 +162,10 @@
 				<div class="col-md-6 ">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2020-2024</span>
-						<h2>Bachelor's in Data Science </h2>
-						<span class="position">Narsee Monjee Institute Of Management Studies, Mumbai</span>
-						<p class="mt-4">Currently pursuing BTech in Data Science at NMIMS,Mumbai with an ongoing CGPA of
-							3.78(as of semester VI)</p>
+						<h2>Bachelor's in IT </h2>
+						<span class="position">Charotar University of Science &  Technology, Changa</span>
+						<p class="mt-4">Currently pursuing BTech in IT at CHARUSAT, Changa with an ongoing CGPA of
+							8.68(as of semester VI)</p>
 					</div>
 					<!-- <div class="resume-wrap ftco-animate">
 						<span class="date">2014-2015</span>
@@ -393,9 +393,8 @@
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
 							<h3><a href="https://esha-g-patient-data-clustering-web-app-streamlit-gn1npw.streamlit.app/"
-									target="_blank">Patient
-									Data Segmentation</a></h3>
-							<span>Machine Learning</span>
+									target="_blank">Medibuddy</a></h3>
+							<span>Mobile Application Development</span>
 						</div>
 					</div>
 					<p>Machine Learning</p>
