--- a/index.html
+++ b/index.html
@@ -397,18 +397,18 @@
 							<span>Mobile Application Development</span>
 						</div>
 					</div>
-					<p>Machine Learning</p>
+					<p>Mobile Application Development</p>
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
 						style="background-image: url(images/nlp.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="https://github.com/esha-G/TextSense" target="_blank">TextSense</a></h3>
-							<span>Intelligent Text Extraction and Analysis</span>
+							<h3><a href="https://github.com/esha-G/TextSense" target="_blank">Around The World</a></h3>
+							<span>Responsive Website</span>
 						</div>
 					</div>
-					<p>Natural Language Processing</p>
+					<p>Responsive Website</p>
 				</div>
 
 				<div class="col-md-4">
@@ -416,12 +416,12 @@
 						style="background-image: url(images/cv.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="https://github.com/esha-G/Trace-pass" target="_blank">Trace-Pass</a>
+							<h3><a href="https://github.com/esha-G/Trace-pass" target="_blank">Pandora</a>
 							</h3>
-							<span>Computer Vision</span>
+							<span>Quora clone</span>
 						</div>
 					</div>
-					<p>Computer Vision</p>
+					<p>Quora clone</p>
 				</div>
 				<!--
 				<div class="col-md-4">
