--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 								<span class="subheading">Hello!</span>
 								<h1 class="mb-4 mt-3">I'm <span>Esha Gandhi</span></h1>
 								<h2 class="mb-4">A Problem Solver</h2>
-								<p><a href="sol.html " class="btn btn-primary py-3 px-4" target="_blank">Prove
-										it!</a> </p>
+								<!-- <p><a href="sol.html " class="btn btn-primary py-3 px-4" target="_blank">Prove
+										it!</a> </p> -->
 								<!-- <a href="#projects-section"
 										class="btn btn-white btn-outline-white py-3 px-4">My
 										works</a></p> -->
@@ -112,7 +112,7 @@
 					<div class="img-about img d-flex align-items-stretch">
 						<div class="overlay"></div>
 						<div class="img d-flex align-self-stretch align-items-center"
-							style="background-image:url(images/13.png); min-height: 400px; background-position: center calc(50% - 40px);">
+							min-height: 400px; background-position: center calc(50% - 40px);">
 						</div>
 					</div>
 				</div>
