--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
 						<div class="text">
 							<strong class="number" data-number="75695">0</strong>
 							<span>Cups of coffee</span>
-							<p> still &lt; Mumbai rents</p>
+							<p> still &lt; Sleep</p>
 						</div>
 					</div>
 				</div>
@@ -597,7 +597,7 @@
 							<span class="icon-map-signs"></span>
 						</div>
 						<h3 class="mb-4">Address</h3>
-						<p>Mumbai, Maharashtra, India</p>
+						<p>Rajkot, Gujarat, India</p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
